syntax = "proto3";
package grpc;

option go_package = "https://github.com/lilkimo/INF343-Tarea-3/protoBrokerLeia";

/*Comando de mensaje*/
message MensajeToBroker {
    string comando = 1;
    string nombre_planeta = 2;
    string nombre_ciudad = 3;
}

message Respuesta {
    int32 numero_rebeldes = 1;
    repeated int32 vector = 2;
}

service ConnToBroker {
    rpc GetNumberRebelds (MensajeToBroker) returns (Respuesta);
}
